# pytest-pystack

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  LICENSE.txt  Makefile  NEWS.rst  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yaml  validate.yaml
src/pytest_pystack/: _config.py  _debug_detect.py  _monitor.py  _monitor_process.py  _multiprocessing_context.py  plugin.py
tests/: test_pytest_pystack.py
